--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -27,6 +27,10 @@ body {
     border-color: #dd4b39;
 }
 
+.bootstrap-dialog.type-primary .modal-header {
+    background-color: #dd4b39;
+}
+
 div#w0 a {
     color: #dd4b39;
 }
